--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-rluck contains a random assortment of notes.
+rluck contains a random assortment of scripts and software.  You will find thoughts and descriptions in my wiki.
